--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,165 @@
+:root {
+  --bg-color: #151515;
+  --primary-color: #BBBBBF;
+  --accent-color: #CB9EFF;
+  --icon-size: 28px;
+}
+
+html, body, main {
+  height: 100%;
+  margin: 0;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Verdana, Geneva, sans-serif, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue';
+  font-size: 24px;
+  background-color: var(--bg-color);
+  color: var(--primary-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+main {
+  padding: 10px;
+}
+
+h1 {
+  margin: 0;
+  font-size: 34px;
+  font-weight: normal;
+}
+
+h2 {
+  margin: 0;
+  font-size: 28px;
+  font-weight: normal;
+}
+
+.highlight {
+  color: var(--accent-color);
+}
+
+a {
+  color: var(--primary-color);
+  cursor: pointer;
+}
+
+a:hover {
+  color: var(--accent-color);
+}
+
+.links .icon {
+  -webkit-transition: fill 0.2s ease-out;
+  -moz-transition: fill 0.2s ease-out;
+  transition: fill 0.2s ease-out;
+  fill: var(--primary-color);
+  height: var(--icon-size);
+  width: var(--icon-size);
+}
+
+.links img:hover, .links svg:hover, .active {
+  filter: sepia(100%) saturate(200%) brightness(80%) hue-rotate(220deg);
+}
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+
+.bordered {
+  border: 1px solid var(--primary-color);
+}
+
+input, select {
+  height: 45px;
+  padding: 0 1rem;
+  margin-top: 1rem;
+  box-sizing: border-box;
+  font: inherit;
+  border-radius: 30px;
+  border: 2px solid var(--primary-color);
+  background-color: var(--bg-color);
+  color: var(--accent-color);
+  -webkit-appearance: none;
+}
+
+input:focus, select:focus {
+  border-color: var(--accent-color);
+  outline: none;
+}
+
+input.has-error {
+  border-color: tomato;
+}
+
+.error {
+  margin: 0;
+  font-size: 90%;
+  color: tomato;
+}
+
+.chips-item {
+  cursor: default;
+  background-color: var(--bg-color);
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 40px;
+  height: 40px;
+  padding: 0 4px 0 1rem;
+  display: inline-flex;
+  align-items: center;
+  margin: 0 0.3rem 0.3rem 0;
+}
+
+.button {
+  background-color: var(--primary-color);
+  color: var(--bg-color);
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font: inherit;
+  font-size: 18px;
+  margin-left: 10px;
+  font-weight: bold;
+  padding: 0;
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.button:hover {
+  background-color: var(--accent-color);
+}
+
+*::-webkit-scrollbar {
+  width: 12px;               /* width of the entire scrollbar */
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--bg-color);        /* color of the tracking area */
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 3px solid var(--bg-color);  /* creates padding around scroll thumb */
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: var(--accent-color);    /* color of the scroll thumb */
 }
