feat: Complete school detail page

--- a/src/pages/school-page/SchoolPage.css
+++ b/src/pages/school-page/SchoolPage.css
@@ -25,12 +25,58 @@ section#school-section .loading-spinner {
     padding-top: 25vh
 }
 
+section#school-section h1 {
+    color: var(--accent-color);
+}
 
-section#school-section .school-details {
+section#school-section h2 {
+    color: var(--accent-color);
+    margin-bottom: 10px;
+}
+
+section#school-section .school {
     grid-column: 2;
     grid-row: 2;
-    max-height: 75vh;
+    max-height: 80vh;
     overflow-y: scroll;
     width: 100%;
     height: 100%;
+}
+
+section#school-section .panel {
+    padding: 30px;
+    margin: 20px;
+}
+
+section#school-section .panel td {
+    padding: 5px 40px;
+}
+
+#school-location {
+    display: grid;
+    grid-template: 64px 1fr / 1fr 1fr;
+}
+#school-location .details {
+    grid-row: 2;
+    grid-column: 1;
+}
+#school-location .map {
+    grid-row: 2;
+    grid-column: 2;
+}
+
+#school-enrolments {
+    display: flex;
+    flex-direction: column;
+}
+
+/* Center the pie chart inside the frame */
+#school-enrolments div {
+    align-self: center;
+    justify-self: center;
+}
+
+#school-enrolments svg text{
+    font-size: 18px !important;
+    font-weight: bold;
 }
