feat: Initial mobile support

--- a/src/index.css
+++ b/src/index.css
@@ -163,3 +163,8 @@ input.has-error {
 *::-webkit-scrollbar-thumb:hover {
   background-color: var(--accent-color);    /* color of the scroll thumb */
 }
+
+@media (max-width: 640px) {
+  h1 { font-size: 20px; }
+  h2 { font-size: 18px; }
+}
